--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -2418,21 +2418,21 @@ body.civilwar #main-bars p {
 	text-indent: -1000em;
 	margin-bottom: 1em;
 }
-#event-bar h2.events a {
+h2.events a {
 		background:  url(http://seekingmichigan.org/images/CivilWar-title-events.gif) no-repeat 0 0;
 }
-#blog-bar h2.reveille a {
+h2.reveille a {
 	background:  url(http://seekingmichigan.org/images/CivilWar-title-rev.gif) no-repeat;
 	height: 85px;
 }
-#blog-bar h2.artifact a {
+h2.artifact a {
 	background:  url(http://seekingmichigan.org/images/CivilWar-title-arti.gif) no-repeat;
 	margin-top: 1em;
 }
-#resource-bar h2.links a {
+h2.links a {
 	background:  url(http://seekingmichigan.org/images/CivilWar-title-links.gif) no-repeat;
 }
-#resource-bar h2.photos a {
+h2.photos a {
 	background:  url(http://seekingmichigan.org/images/CivilWar-title-photos.gif) no-repeat;
 	margin-top: 1em;
 }
@@ -2518,6 +2518,7 @@ body.civilwar #resource-bar {
   float: left;
   width: 30%;
   margin-right: 10px;
+  margin-top: 0;
 }
 
 div.sponsor-plug {
