--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -3807,14 +3807,46 @@ table.fc-header {
 	cursor: s-resize;
 	}
 	
+#event-tooltip
+{ 
+    display:none; 
+    background-image: url("../images/tooltip-bg.png");
+    background-repeat:repeat-x;
+    font-size:12px; 
+    height:auto; 
+    width:auto; 
+    padding: 10px 20px; 
+    color:#333;  
+    z-index: 10;
+    position: absolute;
+    font-family: Arial;
+    background-color: white;
+    border: 1px solid #ababab;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-top: -4px;
+    opacity: 0.88;
+    max-width: 200px;
+}
+
+#event-tooltip strong
+{ 
+    font-size:13px; 
+}
+
+#event-tooltip.bottom
+{ 
+   margin-top: 5px;
+} 
 	
 .kccredit {
-	display:block;
-	clear:both;
+	display:none;
+	/* clear:both;
 	overflow:hidden;
 	padding: 5px 0;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-size: 10px; */
 }
 
 /* ---- CIVIL WAR BROWSE ELEMENTS ---- */
