--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -2313,7 +2313,7 @@ body.civilwar #main-whitebox-top {
 }
 
 body.civilwar #main {
-	margin-top: ;
+	/* margin-top: ; */
 }
 body.civilwar #lead-in {
 	position: absolute;
