--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -3022,11 +3022,11 @@ body.civilwar #content #results {
 body.civilwar #content #results li {
 	padding: 10px 28px 20px 14px;
 	border-bottom: 1px dotted #bfbfbf;
-	height: 175px;
+	min-height: 175px;
 }
 
 body.civilwar #content #results li.bookmark {
-	height: 145px;
+	min-height: 145px;
 }	
 
 body.civilwar #content #results h4 {
