--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -3071,6 +3071,7 @@ body.civilwar #content #results .details li.share-link {
 	margin-left: 10px;
 	height: 5px;
 	padding-right: 0px;
+	min-height: 20px;
 }
 
 body.civilwar #content #results .details li.location {
